cluster/apps/finance/rxresume/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rxresume-client
  namespace: finance
  labels:
    app: rxresume-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume-client
  template:
    metadata:
      labels:
        app: rxresume-client
    spec:
      containers:
        - name: rxresume-client
          image: amruthpillai/reactive-resume:client-v3.6.17
          ports:
            - containerPort: 3000
