cluster/apps/finance/rxresume/server-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rxresume-server
  namespace: finance
  labels:
    app: rxresume-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rxresume-server
  template:
    metadata:
      labels:
        app: rxresume-server
    spec:
      containers:
        - name: rxresume-server
          image: amruthpillai/reactive-resume:server-v3.4.7
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/server/dist/assets/uploads
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: rxresume-server-data
