cluster/apps/finance/rxresume/client-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rxresume-client
  namespace: finance
spec:
  selector:
    app: rxresume-client
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 3000
