cluster/apps/finance/rxresume/server-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rxresume-server
  namespace: finance
spec:
  selector:
    app: rxresume-server
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      protocol: TCP
      port: 3000
