cluster/apps/finance/rxresume/fake-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ipv4.${SECRET_DOMAIN}
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: rxresume-ingress
  namespace: finance
spec:
  ingressClassName: traefik
  rules:
    - host: resume.${SECRET_DOMAIN}
  tls:
    - hosts:
        - resume.${SECRET_DOMAIN}
      secretName: resume-tls
