cluster/apps/finance/rxresume/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rxresume-ingress-route
  namespace: finance
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`resume.${SECRET_DOMAIN}`) && PathPrefix(`/api/`)
      priority: 1
      middlewares:
        - name: rxresume-strip-api-prefix
          namespace: networking
      services:
        - kind: Service
          name: rxresume-server
          namespace: finance
          port: 3100
    # - kind: Rule
    #   match: "Host(`resume.${SECRET_DOMAIN}`)"
    #   priority: 15
    #   services:
    #     - kind: Service
    #       name: rxresume-client
    #       namespace: finance
    #       port: 3000
  tls:
    secretName: resume-tls
